...
            android:layout_height="wrap_content"
            card_view:cardBackgroundColor="#E6E6E6"
            card_view:cardCornerRadius="8dp"
            card_view:cardElevation="8dp"
            android:layout_margin="20dp">
            <TextView
                android:id="@+id/tv_short_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="8dp"
                android:textSize="18sp"
                android:textColor="@color/colorPrimary" />
...
