...
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:layout_margin="8dp"
            android:textSize="24sp"
            android:text="Quantity:" />
        <TextView
            android:id="@+id/tv_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:layout_margin="8dp"
            android:layout_marginBottom="16dp"
            android:textSize="24sp" />
...
